major updates to javascript, finalized question shifting, highscore, and timer issues

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -54,4 +54,29 @@ text-align: center;
 .answers{
 display: flex;
 flex-direction: column;
+align-items: center;
+
+}
+
+#done{
+    display: none;
+    text-align: center;
+}
+
+#scoreboard{
+    display: none;
+    text-align: center;
+}
+
+button{
+width:fit-content;
+margin: 10px;
+
+}
+
+#feedback{
+font-size: 2em;
+font-weight: bold;
+margin-top: 20px;
+
 }
